@@ -1,3 +1,6 @@
+2015-06-11   8:52  Christos Zoulas <christos@zoulas.com>
+
+	* redo long option encoding to fix off-by-one in 5.23
 
 2015-06-10  13:50  Christos Zoulas <christos@zoulas.com>
 
